# conv-mf

./: README.md  main.py  pyproject.toml
conv_mf/algorithm/: __init__.py  cnn.py  grad_descent.py  loss.py  lr.py  mf.py  vec_lr.py
tests/: test_conv_mf.py
