[tool.poetry]
name = "conv-mf"
version = "0.1.0"
description = ""
authors = ["sdual <shr.nrht.0623@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.18.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
